# owasp

./: .gitignore  README.md  app.py  config.yaml  requirements.txt
agents/: README.es.md  README.md  code_changes.txt  code_changes_insecure.txt  flow_state.json  main.py  requirements.txt  result.dill
agents/checksheet_crew/: README.md  main.py
agents/checksheet_crew/config/: agents.yaml  tasks.yaml
agents/code_review_crew/: crew.py  utils.py
agents/code_review_crew/config/: agents.yaml  tasks.yaml
agents/code_review_crew/guardrails/: guardrails.py
agents/code_review_flow/: README.md  pyproject.toml
agents/code_review_flow/src/code_review_flow/: main.py  utils.py
agents/code_review_flow/src/code_review_flow/crews/code_review_crew/: crew.py
agents/code_review_flow/src/code_review_flow/crews/code_review_crew/config/: agents.yaml  tasks.yaml
agents/code_review_flow/src/code_review_flow/crews/code_review_crew/guardrails/: guardrails.py
agents/code_review_flow/src/code_review_flow/tools/: custom_tool.py
agents/config/: agents.yaml  tasks.yaml
agents/files/: code_changes_simple.txt
agents/report/: recommendations.md
agents/top10_crew/: README.md  main.py
agents/top10_crew/config/: agents.yaml  tasks.yaml
owasp_llm/: app.py  config.yaml  requirements.txt
report/: code_review_20260131_204429.md  code_review_20260131_210028.md  code_review_20260131_211326.md  code_review_20260201_094126.md
src/: __init__.py  cache_manager.py  cheatsheet_parser.py  config_manager.py  firecrawl_client.py  models.py  top10_data.py
